--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     </parent>
     <groupId>com.t0bij.springdatarest</groupId>
     <artifactId>put-reproducer</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-MAP</version>
     <name>put-reproducer</name>
-    <description>put-reproducer</description>
+    <description>Spring Data REST - PUT Problem Reproducer</description>
     <url/>
     <licenses>
         <license/>
@@ -27,7 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>22</java.version>
+        <java.version>21</java.version>
     </properties>
     <dependencies>
         <dependency>
