--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.t0bij.springdatarest</groupId>
     <artifactId>put-reproducer</artifactId>
-    <version>0.0.1-SET</version>
+    <version>0.0.1-PLAIN</version>
     <name>put-reproducer</name>
     <description>Spring Data REST - PUT Problem Reproducer</description>
     <url/>
